chore: minor adjustments

--- a/integrationExamples/gpt/bms_sample.html
+++ b/integrationExamples/gpt/bms_sample.html
@@ -70,8 +70,8 @@
           geo: {
             lat: -23.5505,
             lon: -46.6333,
-            type: 1, // GPS/Location Services
-            accuracy: 100, // Precisão em metros
+            type: 1,
+            accuracy: 100,
           },
         },
       };
@@ -100,7 +100,7 @@
               },
             ],
           },
-          floors: {}, // Ativa o módulo
+          floors: {},
           ortb2: ortb2,
         });
         pbjs.bidderSettings = {
